--- a/module_5/ex01/Makefile
+++ b/module_5/ex01/Makefile
@@ -2,7 +2,7 @@ CXX := c++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98
 RM := rm -rf
 
-NAME := maggots
+NAME := ex01
 
 SRCS := main.cpp Bureaucrat.cpp Form.cpp
 OBJS := $(SRCS:.cpp=.o)
