valgrind added on Makefiles

--- a/module_9/ex00/Makefile
+++ b/module_9/ex00/Makefile
@@ -4,8 +4,8 @@ SRCS = $(wildcard *.cpp)
 OBJS = $(SRCS:%.cpp=%.o)
 
 CC = c++
-CPP_FLAGS = -Wall -Wextra -Werror
-CC_FLAGS = -std=c++98 -pedantic-errors -fsanitize=address
+CPP_FLAGS = -g -O0 -Wall -Wextra -Werror
+CC_FLAGS = -std=c++98 -pedantic-errors 
 
 $(NAME): $(OBJS)
 	$(CC) $(CPP_FLAGS) $(CC_FLAGS) *.o -o $(NAME)
@@ -13,13 +13,20 @@ $(NAME): $(OBJS)
 %.o: %.cpp
 	$(CC) $(CPP_FLAGS) $(CC_FLAGS) -c $< -o $@
 
+valgrind: $(NAME)
+	valgrind --leak-check=full \
+	         --show-leak-kinds=all \
+	         --track-origins=yes \
+	         --log-file=valgrind-out.txt \
+	         ./$(NAME) input.csv
+
 all: $(NAME)
 
 clean:
 	rm -f *.o
 
 fclean: clean
-	rm -f $(NAME)
+	rm -f $(NAME) valgrind-out.txt
 
 re: fclean all
 
